# om_assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  config.py  deep_agent.py  main.py  memory.py  om_client.py  pyproject.toml  requirements.txt
app/: __init__.py
app/agent/: __init__.py  agent.py
app/api/: __init__.py  server.py
app/core/: __init__.py  config.py
app/services/: __init__.py  memory.py  om_client.py
